# Study-Atlas

./: README.md  package-lock.json  package.json  vite.config.ts
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/lib/components/: ChipInput.svelte  ConfirmDialog.svelte  HeatmapCalendar.svelte  MetricCard.svelte  OutcomePill.svelte  PlanBlockEditor.svelte  QuickLogModal.svelte  SessionRow.svelte  Sidebar.svelte  TopHeader.svelte  TutorChat.svelte  WeeklyGoalRing.svelte
src/lib/components/Charts/: DailyBars.svelte  DonutChart.svelte  SparkLine.svelte  WeeklyBars.svelte
src/lib/db/: client.ts  migrations.ts  utils.ts
src/lib/db/repositories/: briefs.repo.ts  goals.repo.ts  sessions.repo.ts  subjects.repo.ts  topics.repo.ts
src/lib/domain/: analytics.ts  planner.ts  types.ts
src/lib/services/: llm.ts
src/lib/stores/: brief.store.ts  confirm.store.ts  timer.store.ts  tutor.store.ts  ui.store.ts
src/routes/: +layout.svelte
src/routes/calendar/: +page.svelte
src/routes/insights/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/subjects/: +page.svelte
src/routes/subjects/[id]/: +page.svelte
src/routes/today/: +page.svelte
